# uasl_motion_estimation

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  MotionEstimation.cbp  MotionEstimation.depend  MotionEstimation.layout  README.md  main.cpp  main_mono.cpp  main_stereo.cpp
cmake/: Config.cmake.in
examples/mono/: config.yml
examples/mono/data/: gps_data.csv  imu_data.csv  log.txt
examples/stereo/: config.yml
examples/stereo/data/: image_data.csv  log.txt
include/: CeresBA.h  Graph2D.h  Graph3D.h  data_utils.h  featureType.h  fileIO.h  gps_utils.h  gui_utils.h  matcher.h  mono_viso.h  motionEstimation.h  mutualInformation.h  optimisation.h  stereo_viso.h  utils.h  viso.h  viso_stereo.h  windowedBA.h
include/MotionEstimation/core/: data_utils.h  feature_types.h  file_IO.h  gps_utils.h  rotation_utils.h
include/MotionEstimation/gui/: Graph2D.h  Graph3D.h  gui_utils.h
include/MotionEstimation/optimisation/: BundleAdjuster.h  CeresBA.h  optimisation.h
include/MotionEstimation/vo/: StereoVisualOdometry.h  VisualOdometry.h
include/core/: data_utils.h  feature_types.h  file_IO.h  gps_utils.h  mutual_information.h  rotation_utils.h
include/gui/: Graph2D.h  Graph3D.h  gui_utils.h
include/optimisation/: BundleAdjuster.h  CeresBA.h  optimisation.h
include/vo/: MonoVisualOdometry.h  StereoVisualOdometry.h
src/: CeresBA.cpp  Graph2D.cpp  Graph3D.cpp  featureType.cpp  fileIO.cpp  gui_utils.cpp  mono_viso.cpp  mutualInformation.cpp  optimisation.cpp  stereo_viso.cpp  utils.cpp  viso.cpp  viso_stereo.cpp  windowedBA.cpp
src/core/: feature_types.cpp  file_IO.cpp  mutual_information.cpp  rotation_utils.cpp
src/gui/: Graph2D.cpp  Graph3D.cpp  gui_utils.cpp
src/optimisation/: CeresBA.cpp  optimisation.cpp
src/vo/: MonoVisualOdometry.cpp  StereoVisualOdometry.cpp
